[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tencentdb-agent-memory-sdk-python"
version = "0.1.0"
description = "Python SDK for TencentDB Agent Memory v2 API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "TencentDB Agent Memory Team" }]
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20", "build", "python-dotenv>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["tencentdb_agent_memory"]
